# asp-spring2025-rust

./: .gitignore  BRIDGE_README.md  Cargo.toml  PROJECT_CHECKLIST.md  README.md  courses.json  flutter_rust_bridge_codegen.yaml  generate_bridge.sh  users.json
__MACOSX/: ._Cargo.toml  ._static
__MACOSX/src/: ._main.rs
__MACOSX/static/: ._admin.html  ._index.html  ._script.js  ._student.html  ._style.css
backend/: Cargo.toml
backend/data/: constraints.json  course_schedules.json  courses.json  degree_requirements.json  enrollments.json  majors.json  professors.json  semester_plans.json  student_preferences.json  students.json
backend/src/: api.rs  lib.rs  main.rs  models.rs  utils.rs
backend/src/api/: routes.rs
backend/src/models/: app_state.rs  mod.rs  models.rs
backend/src/utils/: file_utils.rs  mod.rs  schedule_utils.rs
data/: constraints.json  courses.json  preferences.json  semester_plans.json  students.json
docs/: architecture.txt
frontend/: ReadmeUpdate.md  index.html  pubspec.yaml
frontend/css/: styles.css
frontend/js/: script.js
frontend/lib/: main.dart
frontend/lib/api/: api.dart  bridge.dart
frontend/lib/api/models/: course.dart  preferences.dart  schedule.dart
frontend/lib/screens/: course_list_screen.dart  dashboard_screen.dart  home_screen.dart  preferences_screen.dart  schedule_grid_screen.dart
src/: main.rs
static/: admin.html  index.html  script.js  student.html  style.css
